Set Data Structure to abstract Installments and fix database mapping